--- a/.github/workflows/compile_matlab.yml
+++ b/.github/workflows/compile_matlab.yml
@@ -9,12 +9,10 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: [ubuntu-latest, macos-latest, windows-latest]
+                os: [ubuntu-latest, windows-latest]
                 include:
                     - os: ubuntu-latest
                       mex_ext: mexa64
-                    - os: macos-latest
-                      mex_ext: mexmaci64
                     - os: windows-latest
                       mex_ext: mexw64
 
