--- a/.github/workflows/compile_matlab.yml
+++ b/.github/workflows/compile_matlab.yml
@@ -21,7 +21,7 @@ jobs:
         steps:
             - name: Set up MATLAB
               uses: matlab-actions/setup-matlab@v2
-            - name: Checkout spm/spm/
+            - name: Checkout SPM
               uses: actions/checkout@v4
               with:
                   repository: spm/spm
@@ -35,39 +35,34 @@ jobs:
               with:
                   name: spm-matlab-${{ matrix.os }}
                   path: ./**/*.${{ matrix.mex_ext }}
+                  retention-days: 1
 
 
-    merge_artifacts:
+    add_artifacts_to_spm:
         runs-on: ubuntu-latest
         needs: compile_mex
         steps:
+            - name: Checkout SPM
+              uses: actions/checkout@v4
+              with:
+                  repository: spm/spm                  
             - name: Download Linux Artifact
               uses: actions/download-artifact@v4
               with:
                   name: spm-matlab-ubuntu-latest
-                  path: artifacts/linux
 
             - name: Download macOS Artifact
               uses: actions/download-artifact@v4
               with:
                   name: spm-matlab-macos-13
-                  path: artifacts/macos
 
             - name: Download Windows Artifact
               uses: actions/download-artifact@v4
               with:
                   name: spm-matlab-windows-latest
-                  path: artifacts/windows
 
-            - name: Merge Artifacts
-              run: |
-                  mkdir -p artifacts/all
-                  cp -r artifacts/linux/* artifacts/all/
-                  cp -r artifacts/macos/* artifacts/all/
-                  cp -r artifacts/windows/* artifacts/all/
-
-            - name: Upload Artifact
+            - name: Upload SPM with mex files as Artifact # Avoid to upload files and folders starting with .
               uses: actions/upload-artifact@v4
               with:
                   name: spm-matlab
-                  path: artifacts/all
+                  path: .
