--- a/.github/workflows/compile_matlab.yml
+++ b/.github/workflows/compile_matlab.yml
@@ -25,8 +25,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: spm/spm
-      - name: Delete old mex files
+
+      - name: Delete old mex files on ubuntu and mac
+        if: matrix.os != 'windows-latest'
         run: rm -rf ./**/*.mex*
+
+      - name: Delete old mex files on windows
+        if: matrix.os == 'windows-latest'
+        run: Remove-Item -Path .\**\*.mex* -Force
+
       - name: Compile MEX files
         run: |
           make -C src distclean
