--- a/.github/workflows/compile_matlab.yml
+++ b/.github/workflows/compile_matlab.yml
@@ -8,8 +8,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest] # macos-latest throws errors when compiling mex
+        os: [ubuntu-latest, macos-13, macos-latest] # macos-latest throws errors when compiling mex
         include:
+          - os: ubuntu-latest
+            mex_ext: mexa64
+          - os: macos-13
+            mex_ext: mexmaci64
           - os: macos-latest
             mex_ext: mexmaca64
 
