--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -1,6 +1,9 @@
 name: Build Matlab Standalone
 on:
   workflow_dispatch:
+  push:
+    paths:
+      - '.github/workflows/build_standalone.yml'
 
 jobs:
   build_matlab_standalone:
