--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ["R2020a", "R2023b"]
+        version: ["R2020a", "R2023b", "latest"]
         os: ["ubuntu-latest", "macos-13", "windows-latest", "macos-latest"]
         exclude:
           - os: windows-latest
@@ -22,10 +22,18 @@ jobs:
             version: "R2021a" # Compiler not available
           - os: windows-latest
             version: "R2021b" # Compiler not available
+          - os: macos-latest
+            version: "R2020a" # MATLAB not available
     runs-on: ${{matrix.os}}
     steps:
-      - name: Set up MATLAB
+      - name: Set up MATLAB (legacy)
         uses: matlab-actions/setup-matlab@v1
+        if: ${{matrix.version == 'R2020a'}} || ${{matrix.version == 'R2020b'}}
+        with:
+          release: ${{matrix.version}}
+      - name: Set up MATLAB
+        uses: matlab-actions/setup-matlab@v2
+        if: ${{matrix.version != 'R2020a'}} && ${{matrix.version != 'R2020b'}}
         with:
           release: ${{matrix.version}}
       - name: Check out repository
