--- a/.github/workflows/compile_matlab.yml
+++ b/.github/workflows/compile_matlab.yml
@@ -43,12 +43,13 @@ jobs:
 
       - name: Compile MEX files
         run: |
-          make -C src distclean
-          make -C src
-          make -C src install
-          make -C src external-distclean
-          make -C src external
-          make -C src external-install
+          # make -C src debug
+          # make -C src distclean
+          # make -C src
+          # make -C src install
+          # make -C src external-distclean
+          # make -C src external
+          # make -C src external-install
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
