--- a/.github/workflows/compile_mex.yml
+++ b/.github/workflows/compile_mex.yml
@@ -3,14 +3,14 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - '.github/workflows/compile_matlab.yml'
+      - '.github/workflows/compile_mex.yml'
 
 jobs:
   compile_mex:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13, macos-latest] # macos-latest throws errors when compiling mex
+        os: [ubuntu-latest, macos-13, macos-latest, windows-latest] # macos-latest throws errors when compiling mex
         include:
           - os: ubuntu-latest
             mex_ext: mexa64
@@ -46,9 +46,9 @@ jobs:
           make -C src distclean
           make -C src
           make -C src install
-          make -C src external-distclean
-          make -C src external
-          make -C src external-install
+          # make -C src external-distclean # on windows there is an issue with fieldtrip
+          # make -C src external
+          # make -C src external-install
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
@@ -61,26 +61,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: compile_mex
     steps:
-      - name: Checkout SPM
-        uses: actions/checkout@v4
-        with:
-          repository: spm/spm
-
-      - name: Delete old MEX files
-        run: find . -type f -name "*.mex*" -delete
-
-      - name: Delete hidden files and folders
-        run: rm -rf .[^.]*
-
       - name: Download Linux Artifact
         uses: actions/download-artifact@v4
         with:
           name: spm-mex-ubuntu-latest
 
-      - name: Download macOS Artifact
+      - name: Download macOS (Intel) Artifact
         uses: actions/download-artifact@v4
         with:
           name: spm-mex-macos-13
+
+      - name: Download macOS (Apple Silicon) Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: spm-mex-macos-latest
 
       - name: Download Windows Artifact
         uses: actions/download-artifact@v4
