test matlab batch token

--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -4,7 +4,8 @@ on:
   push:
     paths:
       - '.github/workflows/build_standalone.yml'
-
+env:
+  MLM_LICENSE_TOKEN: ${{ secrets.MATLAB_BATCH_TOKEN }}
 jobs:
   build_matlab_standalone:
     name: Build Matlab Standalone
