--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
+        with:
+          products: Matlab Compiler
       - name: Checkout SPM
         uses: actions/checkout@v4
         with:
