--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -4,6 +4,9 @@ on:
   push:
     paths:
       - '.github/workflows/build_standalone.yml'
+  release:
+    types: [published]
+
 env:
   MLM_LICENSE_TOKEN: ${{ secrets.MATLAB_BATCH_TOKEN }}
 jobs:
@@ -33,5 +36,28 @@ jobs:
             addpath(genpath('.'));
             savepath;
             spm_make_standalone
-      - name: Start Tmate session
-        uses: mxschmitt/action-tmate@v3
+
+      # Compress to tar.gz or zip
+      - name: Compress Unix
+        if: ${{ runner.os != 'Windows' }}
+        run: |
+          echo "ZIP_ENDING=tar.gz" >> $GITHUB_ENV
+          echo "ZIP_TYPE=gzip" >> $GITHUB_ENV
+          mv standalone standalone_${{ matrix.os }}_${{ github.event.release.tag_name }}
+          tar -vczf standalone_${{ matrix.os }}_${{ github.event.release.tag_name }}.tar.gz standalone_${{ matrix.os }}_${{ github.event.release.tag_name }}
+      - name: Compress Windows
+        if: ${{ runner.os == 'Windows' }}
+        run: |
+          echo "ZIP_ENDING=zip" >> $env:GITHUB_ENV
+          echo "ZIP_TYPE=zip" >> $env:GITHUB_ENV
+          Compress-Archive -Path 'standalone/*' -DestinationPath 'standalone_${{ matrix.os }}_${{ github.event.release.tag_name }}.zip'
+      
+      - name: Upload release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./mritools_${{ matrix.os }}_${{ steps.version.outputs.version }}.${{ env.ZIP_ENDING }}
+          asset_name: mritools_${{ matrix.os }}_${{ steps.version.outputs.version }}.${{ env.ZIP_ENDING }}
+          asset_content_type: application/${{ env.ZIP_TYPE }}
