don't run on tags creation

--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -2,6 +2,8 @@ name: Build Matlab Standalone
 on:
   workflow_dispatch:
   push:
+    tags-ignore:
+      - '*'
     paths:
       - '.github/workflows/build_standalone.yml'
   release:
