--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -13,6 +13,7 @@ jobs:
     name: Build Matlab Standalone
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         version: ["R2021a", "R2021b", "R2022a", "R2022b", "R2023a", "R2023b", "R2024a", "R2024b"]
         os: ["ubuntu-latest", "macos-13", "macos-latest", "windows-latest"] # macos-13 has Intel architecture, macos-latest has Apple Silicon
@@ -56,14 +57,14 @@ jobs:
         run: |
           if [ "${{ matrix.os }}" == "macos-latest" ]; then
             echo "OS_NAME=macOS_ARM" >> $GITHUB_ENV
-          if [ "${{ matrix.os }}" == "macos-13" ]; then
+          elif [ "${{ matrix.os }}" == "macos-13" ]; then
             echo "OS_NAME=macOS_Intel" >> $GITHUB_ENV
           elif [ "${{ matrix.os }}" == "windows-latest" ]; then
             echo "OS_NAME=Windows" >> $GITHUB_ENV
           elif [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
             echo "OS_NAME=Linux" >> $GITHUB_ENV
           else
-            echo "OS_NAME=Unknown OS"
+            echo "OS_NAME=Unknown OS" >> $GITHUB_ENV
           fi
 
       # Compress to tar.gz or zip
