--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -17,6 +17,15 @@ jobs:
       matrix:
         version: ["R2021a", "R2021b", "R2022a", "R2022b", "R2023a", "R2023b", "R2024a", "R2024b"]
         os: ["ubuntu-latest", "macos-13", "macos-latest", "windows-latest"] # macos-13 has Intel architecture, macos-latest has Apple Silicon
+        include:
+          - os: ubuntu-latest
+            os_name: Linux
+          - os: macos-13
+            os_name: macOS_Intel
+          - os: macos-latest
+            os_name: macOS_Apple_Silicon
+          - os: windows-latest
+            os_name: Windows
         exclude:
           - os: windows-latest
             version: "R2021a" # Compiler not available
@@ -52,35 +61,20 @@ jobs:
             savepath;
             spm_make_standalone
 
-      # Define OS names
-      - name: Define OS Names
-        run: |
-          if [ "${{ matrix.os }}" == "macos-latest" ]; then
-            echo "OS_NAME=macOS_ARM" >> $GITHUB_ENV
-          elif [ "${{ matrix.os }}" == "macos-13" ]; then
-            echo "OS_NAME=macOS_Intel" >> $GITHUB_ENV
-          elif [ "${{ matrix.os }}" == "windows-latest" ]; then
-            echo "OS_NAME=Windows" >> $GITHUB_ENV
-          elif [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
-            echo "OS_NAME=Linux" >> $GITHUB_ENV
-          else
-            echo "OS_NAME=Unknown OS" >> $GITHUB_ENV
-          fi
-
       # Compress to tar.gz or zip
       - name: Compress Unix
         if: ${{ runner.os != 'Windows' }}
         run: |
           echo "ZIP_ENDING=tar.gz" >> $GITHUB_ENV
           echo "ZIP_TYPE=gzip" >> $GITHUB_ENV
-          mv ../standalone spm__${{ github.event.release.tag_name }}_${{ env.OS_NAME }}_${{ matrix.version }}
-          tar -vczf spm__${{ github.event.release.tag_name }}_${{ env.OS_NAME }}_${{ matrix.version }}.tar.gz spm__${{ github.event.release.tag_name }}_${{ env.OS_NAME }}_${{ matrix.version }}
+          mv ../standalone spm__${{ github.event.release.tag_name }}_${{ matrix.os_name }}_${{ matrix.version }}
+          tar -vczf spm__${{ github.event.release.tag_name }}_${{ matrix.os_name }}_${{ matrix.version }}.tar.gz spm__${{ github.event.release.tag_name }}_${{ matrix.os_name }}_${{ matrix.version }}
       - name: Compress Windows
         if: ${{ runner.os == 'Windows' }}
         run: |
           echo "ZIP_ENDING=zip" >> $env:GITHUB_ENV
           echo "ZIP_TYPE=zip" >> $env:GITHUB_ENV
-          Compress-Archive -Path '../standalone/*' -DestinationPath 'spm__${{ github.event.release.tag_name }}_${{ env.OS_NAME }}_${{ matrix.version }}.zip
+          Compress-Archive -Path '../standalone/*' -DestinationPath 'spm__${{ github.event.release.tag_name }}_${{ matrix.os_name }}_${{ matrix.version }}.zip
           
       - name: Release
         uses: softprops/action-gh-release@v2
