fix release action

--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -79,5 +79,4 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          files: standalone*.${{ env.ZIP_ENDING }}
-          
+          files: spm*.${{ env.ZIP_ENDING }}
