--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -65,12 +65,12 @@ jobs:
       - name: Compress Unix
         if: ${{ runner.os != 'Windows' }}
         run: |
-          mv ../standalone spm__${{ github.ref }}_${{ matrix.os_name }}_${{ matrix.version }}
-          tar -vczf spm__${{ github.ref }}_${{ matrix.os_name }}_${{ matrix.version }}.tar.gz spm__${{ github.ref }}_${{ matrix.os_name }}_${{ matrix.version }}
+          mv ../standalone spm_${{ github.ref_name }}_${{ matrix.os_name }}_${{ matrix.version }}
+          tar -vczf spm_${{ github.ref_name }}_${{ matrix.os_name }}_${{ matrix.version }}.tar.gz spm_${{ github.ref_name }}_${{ matrix.os_name }}_${{ matrix.version }}
       - name: Compress Windows
         if: ${{ runner.os == 'Windows' }}
         run: |
-          Compress-Archive -Path '../standalone/*' -DestinationPath 'spm__${{ github.ref }}_${{ matrix.os_name }}_${{ matrix.version }}.zip'
+          Compress-Archive -Path '../standalone/*' -DestinationPath 'spm_${{ github.ref_name }}_${{ matrix.os_name }}_${{ matrix.version }}.zip'
           
       - name: Release
         uses: softprops/action-gh-release@v2
