--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -18,7 +18,7 @@ jobs:
         version: ["R2021a", "R2021b", "R2022a", "R2022b", "R2023a", "R2023b", "R2024a", "R2024b"]
         os: ["ubuntu-20.04", "macos-13", "macos-latest", "windows-latest"] # macos-13 has Intel architecture, macos-latest has Apple Silicon
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             os_name: Linux
           - os: macos-13
             os_name: macOS_Intel
