--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -73,6 +73,9 @@ jobs:
             savepath;
             spm_make_standalone
 
+      - name: Start Tmate session
+        uses: mxschmitt/action-tmate@v3
+
       # Compress to tar.gz or zip
       - name: Compress Unix
         if: ${{ runner.os != 'Windows' }}
