--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -48,6 +48,7 @@ jobs:
         uses: matlab-actions/setup-matlab@v2
         with:
           products: MATLAB_Compiler
+          release: version
       - name: Checkout SPM
         uses: actions/checkout@v4
         with:
