--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
         with:
-          version: ${{ matrix.version }}
+          release: ${{matrix.version}}
           products: MATLAB_Compiler
       - name: Checkout SPM
         uses: actions/checkout@v4
