--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -51,46 +51,44 @@ jobs:
           release: ${{matrix.version}}
           products: MATLAB_Compiler
 
-      - name: Extract MATLAB Version from Log
+      - name: Extract MATLAB Version for Linux/Mac
+        if: runner.os != 'Windows'
         run: |
-          # Use grep to find the version string from the log and extract it
-          matlab_version=$(grep -oP 'R[0-9]{4}[ab]' <<< "${{ steps.setup_matlab.outputs.setup_log }}")
-          echo "MATLAB Version Installed: $matlab_version"
+          # Get MATLAB installation path (e.g., /opt/hostedtoolcache/MATLAB/2024.2.999/x64/bin/matlab)
+          matlab_path=$(which matlab)
+          # Go up two levels to get the folder containing the version (e.g., /opt/hostedtoolcache/MATLAB/2024.2.999)
+          matlab_install_dir=$(dirname "$(dirname "$matlab_path")")
+          # Extract the base directory name (e.g., "2024.2.999") and use the first part as the version (R2024b)
+          matlab_version=$(basename "$matlab_install_dir" | cut -d. -f1 | sed 's/^/R/')
+          echo "Extracted MATLAB Version: $matlab_version"
           echo "MATLAB_VERSION=$matlab_version" >> $GITHUB_ENV
 
+      - name: Extract MATLAB Version for Windows
+        if: runner.os == 'Windows'
+        run: |
+          # Get MATLAB installation path (e.g., C:\hostedtoolcache\windows\MATLAB\R2024b\bin\matlab.exe)
+          matlab_path=$(where matlab)
+          # Go up two levels to get the folder containing the version (e.g., C:\hostedtoolcache\windows\MATLAB\R2024b)
+          matlab_install_dir=$(echo "$matlab_path" | ForEach-Object { Split-Path -Parent $_ } | ForEach-Object { Split-Path -Parent $_ })
+          # Extract the base directory name (e.g., "R2024b")
+          matlab_version=$(Split-Path "$matlab_install_dir" -Leaf)
+          echo "Extracted MATLAB Version: $matlab_version"
+          echo "MATLAB_VERSION=$matlab_version" >> $GITHUB_ENV
 
       - name: Checkout SPM
         uses: actions/checkout@v4
         with:
           repository: spm/spm
 
-      # Step to create MATLAB executable path for Linux environments
-      - name: Create MATLAB Executable Path
-        if: ${{ runner.os == 'Linux' }} # This step runs only on Linux
-        run: |
-          matlab_executable=$(which matlab)
-          matlab_base_path=$(dirname "$matlab_executable")
-          glnxa64_path="${matlab_base_path}/glnxa64"
-          glnxa64_os_path="${matlab_base_path}/../sys/os/glnxa64"
-          # echo "LD_LIBRARY_PATH=${glnxa64_path}:${glnxa64_os_path}:$LD_LIBRARY_PATH" >> $GITHUB_ENV
-          # echo "LD_PRELOAD=${glnxa64_os_path}/libstdc++.so.6" >> $GITHUB_ENV
-
       # 1) Add SPM with subfolders to the path 2) Run spm_make_standalone in matlab
       - name: Build Matlab Standalone
         uses: matlab-actions/run-command@v2
         with:
           command: |
-            disp(getenv('LD_LIBRARY_PATH'))
-            disp(getenv('LD_PRELOAD'))
             addpath(genpath('.'));
             savepath;
             spm_make_standalone
             
-      - name: Verify Linking
-        if: ${{ runner.os == 'Linux' }}
-        run: |
-          ldd ../standalone/spm12 | grep libstdc++
-
       # Compress to tar.gz or zip
       - name: Compress Unix
         if: ${{ runner.os != 'Windows' }}
